--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "register-service-worker": "^1.0.0",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.0.19",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
