--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
