--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "chai": "^4.1.2",
     "vue-template-compiler": "^2.5.16"
   },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
